--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,8 @@
-
 {
     "semi": false,
     "tabWidth": 4,
     "singleQuote": true,
     "arrowParens": "avoid",
     "jsxSingleQuote": true,
-    "bracketSpacing:": true
+    "bracketSpacing": true
 }
