--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": ["@babel/plugin-transform-regenerator"]
+    "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
