--- a/package.json
+++ b/package.json
@@ -4,44 +4,51 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "webpack serve --mode development",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "webpack serve --mode development --config=webpack.config.dev.js --open",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack --mode production --config=webpack.config.prod.js"
     },
+    "homepage": "http://192.168.1.11/",
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@progress/jsdo": "^4.4.1",
         "@progress/jsdo-core": "^6.0.1",
+        "axios": "^0.21.1",
         "formik": "^2.2.6",
-        "html-webpack-plugin": "^5.0.0",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-router-dom": "^5.2.0",
+        "html-webpack-plugin": "^5.3.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.1",
+        "shortid": "^2.2.16",
         "styled-components": "^5.2.1",
         "yup": "^0.32.8"
     },
     "devDependencies": {
-        "@babel/cli": "^7.12.13",
-        "@babel/core": "^7.12.13",
+        "@babel/cli": "^7.14.8",
+        "@babel/core": "^7.15.0",
         "@babel/plugin-transform-regenerator": "^7.12.13",
-        "@babel/preset-env": "^7.12.13",
-        "@babel/preset-react": "^7.12.13",
-        "@fortawesome/fontawesome-free": "^5.15.2",
+        "@babel/preset-env": "^7.15.0",
+        "@babel/preset-react": "^7.14.5",
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "assets-loader": "^0.5.2",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.2",
-        "css-loader": "^5.0.1",
-        "eslint": "^7.19.0",
+        "css-loader": "^5.2.7",
+        "eslint": "^7.32.0",
         "eslint-config-prettier": "^7.2.0",
-        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-prettier": "^3.4.1",
         "file-loader": "^6.2.0",
-        "husky": "^5.1.1",
-        "prettier": "^2.2.1",
+        "husky": "^5.2.0",
+        "prettier": "^2.3.2",
         "react-number-format": "^4.4.4",
         "style-loader": "^2.0.0",
-        "webpack": "^5.20.1",
-        "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.2"
+        "svg-url-loader": "^7.1.1",
+        "webpack": "^5.51.1",
+        "webpack-cli": "^4.8.0",
+        "webpack-dev-server": "^3.11.2",
+        "webpack-merge": "^5.8.0"
     },
     "husky": {
         "hooks": {
